use std::rc::Rc;

use ash::{extensions, vk};

use crate::{Fence, Semaphore, TvResult, VulkanDevice, Window};

pub struct Swapchain<T: Window> {
    vulkan_device: Rc<VulkanDevice>,
    window: Rc<Box<T>>,
    surface: vk::SurfaceKHR,
    swapchain: vk::SwapchainKHR,
    image_format: vk::Format,
    image_color_space: vk::ColorSpaceKHR,
    image_extent: vk::Extent2D,
    present_mode: vk::PresentModeKHR,
    images: Vec<vk::Image>,
    image_views: Vec<vk::ImageView>,
}

impl<T: Window> Swapchain<T> {
    pub fn new(
        vulkan_device: &Rc<VulkanDevice>,
        window: &Rc<Box<T>>,
        surface: &vk::SurfaceKHR,
    ) -> TvResult<Swapchain<T>> {
        let surface_loader = vulkan_device.surface_loader();
        let physical_device = vulkan_device.physical_device();
        let surface_format = choose_swapchain_format(&surface_loader, &physical_device, surface)?;

        let present_mode =
            choose_swapchain_present_mode(&surface_loader, &physical_device, surface)?;

        let surface_capabilities = unsafe {
            surface_loader.get_physical_device_surface_capabilities(physical_device, *surface)?
        };
        let image_count = std::cmp::min(
            surface_capabilities.min_image_count + 1,
            surface_capabilities.max_image_count,
        );
        let surface_resolution = if surface_capabilities.current_extent.width == std::u32::MAX {
            let (width, height) = window.window_size();
            vk::Extent2D { width, height }
        } else {
            surface_capabilities.current_extent
        };

        let mut swapchain_create_info = vk::SwapchainCreateInfoKHR::builder()
            .surface(*surface)
            .min_image_count(image_count)
            .image_format(surface_format.format)
            .image_color_space(surface_format.color_space)
            .image_extent(surface_resolution)
            .image_array_layers(1)
            .image_usage(vk::ImageUsageFlags::COLOR_ATTACHMENT)
            .pre_transform(surface_capabilities.current_transform)
            .composite_alpha(vk::CompositeAlphaFlagsKHR::OPAQUE)
            .present_mode(present_mode)
            .clipped(true);

        let queue_family_indices = vulkan_device.queue_family_indices();
        let queue_family_indices = [
            queue_family_indices.graphics_family,
            queue_family_indices.present_family,
        ];

        if queue_family_indices[0] != queue_family_indices[1] {
            swapchain_create_info = swapchain_create_info
                .image_sharing_mode(vk::SharingMode::CONCURRENT)
                .queue_family_indices(&queue_family_indices);
        } else {
            swapchain_create_info =
                swapchain_create_info.image_sharing_mode(vk::SharingMode::EXCLUSIVE);
        }

        let swapchain_create_info = swapchain_create_info.build();

        let device = vulkan_device.device();
        let swapchain_loader = vulkan_device.swapchain_loader();
        let swapchain = unsafe { swapchain_loader.create_swapchain(&swapchain_create_info, None)? };
        let images = unsafe { swapchain_loader.get_swapchain_images(swapchain)? };
        let image_views = images
            .iter()
            .map(|&image| {
                let info = vk::ImageViewCreateInfo::builder()
                    .view_type(vk::ImageViewType::TYPE_2D)
                    .format(surface_format.format)
                    .components(vk::ComponentMapping {
                        r: vk::ComponentSwizzle::R,
                        g: vk::ComponentSwizzle::G,
                        b: vk::ComponentSwizzle::B,
                        a: vk::ComponentSwizzle::A,
                    })
                    .subresource_range(vk::ImageSubresourceRange {
                        aspect_mask: vk::ImageAspectFlags::COLOR,
                        base_mip_level: 0,
                        level_count: 1,
                        base_array_layer: 0,
                        layer_count: 1,
                    })
                    .image(image)
                    .build();
                unsafe { device.create_image_view(&info, None).unwrap() }
            })
            .collect::<Vec<vk::ImageView>>();

        Ok(Self {
            vulkan_device: vulkan_device.clone(),
            window: window.clone(),
            surface: *surface,
            swapchain,
            image_extent: surface_resolution,
            image_format: surface_format.format,
            image_color_space: surface_format.color_space,
            images,
            image_views,
            present_mode,
        })
    }

    pub fn image_count(&self) -> usize {
        self.images.len()
    }

    pub fn image_extent(&self) -> vk::Extent2D {
        self.image_extent
    }

    pub fn image_format(&self) -> vk::Format {
        self.image_format
    }

    pub fn image_color_space(&self) -> vk::ColorSpaceKHR {
        self.image_color_space
    }

    pub fn present_mode(&self) -> vk::PresentModeKHR {
        self.present_mode
    }

    pub fn image_view(&self, index: usize) -> vk::ImageView {
        self.image_views[index]
    }

    pub fn acquire_next_image(&self, semaphore: &Semaphore) -> TvResult<(u32, vk::ImageView)> {
        let swapchain_loader = self.vulkan_device.swapchain_loader();
        let (image_index, _) = unsafe {
            swapchain_loader.acquire_next_image(
                self.swapchain,
                std::u64::MAX,
                semaphore.semaphore(),
                vk::Fence::null(),
            )?
        };
        Ok((image_index, self.image_views[image_index as usize]))
    }

    pub fn present(&self, image_index: u32, wait_semaphore: &Semaphore) -> TvResult<()> {
        let swapchain_loader = self.vulkan_device.swapchain_loader();
        let queue = self.vulkan_device.present_queue();
        let present_info = vk::PresentInfoKHR::builder()
            .wait_semaphores(&[wait_semaphore.semaphore()])
            .swapchains(&[self.swapchain])
            .image_indices(&[image_index])
            .build();
        let suboptimal = unsafe { swapchain_loader.queue_present(queue, &present_info) };
        Ok(())
    }
}

impl<T: Window> Drop for Swapchain<T> {
    fn drop(&mut self) {
        let device = self.vulkan_device.device();
        unsafe { device.device_wait_idle().expect("device_wait_idle error") };

        let swapchain_loader = self.vulkan_device.swapchain_loader();
        unsafe { swapchain_loader.destroy_swapchain(self.swapchain, None) };

        for &image_view in &self.image_views {
            unsafe { device.destroy_image_view(image_view, None) };
        }

        let surface_loader = self.vulkan_device.surface_loader();
        unsafe { surface_loader.destroy_surface(self.surface, None) };
    }
}

fn choose_swapchain_format(
    surface_loader: &extensions::khr::Surface,
    physical_device: &vk::PhysicalDevice,
    surface: &vk::SurfaceKHR,
) -> TvResult<vk::SurfaceFormatKHR> {
    let formats =
        unsafe { surface_loader.get_physical_device_surface_formats(*physical_device, *surface)? };

    for &format in &formats {
        if format.format == vk::Format::B8G8R8A8_SRGB
            && format.color_space == vk::ColorSpaceKHR::SRGB_NONLINEAR
        {
            return Ok(format);
        }
    }

    Ok(formats[0])
}

fn choose_swapchain_present_mode(
    surface_loader: &extensions::khr::Surface,
    physical_device: &vk::PhysicalDevice,
    surface: &vk::SurfaceKHR,
) -> TvResult<vk::PresentModeKHR> {
    let present_modes = unsafe {
        surface_loader.get_physical_device_surface_present_modes(*physical_device, *surface)?
    };

    for mode in present_modes {
        if mode == vk::PresentModeKHR::MAILBOX {
            return Ok(mode);
        }
    }

    Ok(vk::PresentModeKHR::FIFO)
}
