@startuml memo

class CommandBuffer
class Pipeline
class RenderPass
class SubPass
class FrameBuffer
class Swapchain

CommandBuffer --> RenderPass
RenderPass --> SubPass
SubPass --> Pipeline
FrameBuffer --> RenderPass
FrameBuffer --> Swapchain : image
RenderPass -> Swapchain : format
RenderPass .> FrameBuffer : begin

@enduml